# mlops-heart-disease-prediction

./: .coverage  .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  MLOPS_Assign1.md  README.md  dvc.yaml  features_train.csv  project_config.yaml  pyproject.toml  requirements.txt  test_api_request.sh
.dvc/: config
.github/workflows/: ci-cd.yml  feature-store-cicd.yml  infra-deploy.yml  model-training-cicd.yml
app/: __init__.py  main.py
data/: raw.dvc
data/processed/: .gitignore  features_test.csv  features_train.csv  heart_disease_clean.csv  preprocessor.pkl
deployment/terraform/: main.tf  outputs.tf  provider.tf  variables.tf
docs/: FINAL_REPORT.md  SCREENSHOT_GUIDE.md  feature_store_cicd_guide.md  github_azure_setup.md  monitoring.md
docs/screenshots/: README.md
feature_specs/: FeatureSetSpec.yaml  heart_disease_features.yaml
k8s/: README.md  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
metrics/: training_metrics.json
models/: model.pkl  preprocessor.pkl
notebooks/: 01_data_acquisition_eda.ipynb  02_eda_with_mlflow.ipynb  EDA_MLFLOW_README.md  mlflow.db
scripts/: analyze_logs.py  configure_dvc.py  eda_with_mlflow.py  test_deployment.sh  test_local_k8s.sh
src/: __init__.py  config.py
src/data/: download_data.py  preprocessing.py
src/features/: deploy_feature_store.py  engineer_features.py
src/models/: evaluation.py  train_model.py  (+2 more)
tests/: conftest.py  test_data_loading.py  test_feature_engineering.py  test_k8s_deployment.py  test_k8s_service.py  test_model_inference.py  test_model_training.py
(+2 files in other folders)
